feat: Add Microsoft.DotNet.Interactive.CSharp package
This commit adds the Microsoft.DotNet.Interactive.CSharp package to the project, bringing new capabilities for C# interactive programming. The PromptyOrchestratorKernel.cs file is also updated to include the necessary using statement for Microsoft.DotNet.Interactive.CSharp.

The sample.ipynb notebook is modified to include a new tool named "doshit" with an input parameter of type string. This change enhances the functionality and flexibility of the notebook.

These changes will enable users to leverage C# interactive features and utilize the new "doshit" tool within the sample.ipynb notebook.

--- a/Interactive.Prompty/Interactive.Prompty/Interactive.Prompty.csproj
+++ b/Interactive.Prompty/Interactive.Prompty/Interactive.Prompty.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.24509.1" />
+    <PackageReference Include="Microsoft.DotNet.Interactive.CSharp" Version="1.0.0-beta.24509.1" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.22.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Prompty" Version="1.22.0-alpha" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
