--- a/Interactive.Prompty/Interactive.Prompty/Interactive.Prompty.csproj
+++ b/Interactive.Prompty/Interactive.Prompty/Interactive.Prompty.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.22.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Prompty" Version="1.22.0-alpha" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="Markdig" Version="0.37.0" />
+    <PackageReference Include="YamlDotNet" Version="16.1.3" />    
   </ItemGroup>
 
 </Project>
