--- a/Interactive.Prompty/Interactive.Prompty.Tests/Interactive.Prompty.Tests.csproj
+++ b/Interactive.Prompty/Interactive.Prompty.Tests/Interactive.Prompty.Tests.csproj
@@ -5,11 +5,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
-	<IsTestProject>true</IsTestProject> 
+	<IsTestProject>true</IsTestProject>
+	  <NoWarn>$(NoWarn);SKEXP0040</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.DotNet.Interactive.PackageManagement" Version="1.0.0-beta.24509.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="xunit" Version="2.9.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
